# dbbh-coms-quant-prism

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-1.97-independent-verification.yml
docs/: PATH1-PATH2-INDEPENDENT-VERIFICATION-2026-07-11.md  SHADOW-RESOLUTION-CAPSTONE.md  WHAT-THE-PAPERS-PROVE-ABOUT-THE-PRISM.md
results/: GPT56-SOL-QPRISM-HARNESS-BINDING-20260709.hbi  GPT56-SOL-QPRISM-HARNESS-BINDING-20260709.hbp
src/: lib.rs
tests/: integration.rs  suite.rs  system.rs
verification/: INDEPENDENT-VERIFICATION-2026-07-11.hbp
